Added cto file as cto.tex to independently edit and merge this part

--- a/whitepaperDeMS.tex
+++ b/whitepaperDeMS.tex
@@ -90,67 +90,20 @@ With the main purpose of generating security in roads and streets, Our camera is
 
 \subsection{Low cost, effective devices}
 
-The lowering costs of pocket computers and the increasing power and efficiency of machine learning techniques allow to build small devices capable of solve huge problems in cities and in the industry
+The lowering costs of pocket computers and the increasing power and efficiency of machine learning techniques allow to build small devices capable of solve huge problems in cities and in the industry.
 
 \begin{figure}[ht]\centering
-\includegraphics[width=\linewidth]{lucam_005}
+\includegraphics[width=\linewidth]{images/lucam_005}
 \caption{All-In-One computer vision device}
 \label{fig:results}
 \end{figure}
 
-Currently Lu-Cam, our smart traffic enforcement camera is a 8x9x16 cm device capable, as seen in figure \ref{fig:results}, and it is capable of detecting events in real time video.
+Currently Lu-Cam, our smart traffic enforcement camera is a 8x9x16 cm device capable, as seen in figure \ref{fig:results}, and it is capable of detecting events in real time video. Rather than getting frame features with convolutional neural networks, different techniques regarding real time fixed video cameras arrise, such as \cite{Cavigelli:2017:CCI:3131885.3131906}, in order to improve efficiency without missing the main objectives of a project.
 
 %------------------------------------------------
+\input{cto}
 
-\section{On the Edge Computing}
-
-\lipsum[10] % Dummy text
-
-\subsection{Subsection}
-
-\lipsum[11] % Dummy text
-
-\begin{table}[hbt]
-\caption{Table of Grades}
-\centering
-\begin{tabular}{llr}
-\toprule
-\multicolumn{2}{c}{Name} \\
-\cmidrule(r){1-2}
-First name & Last Name & Grade \\
-\midrule
-John & Doe & $7.5$ \\
-Richard & Miles & $2$ \\
-\bottomrule
-\end{tabular}
-\label{tab:label}
-\end{table}
-
-\subsubsection{Subsubsection}
-
-\lipsum[12] % Dummy text
-
-\begin{description}
-\item[Word] Definition
-\item[Concept] Explanation
-\item[Idea] Text
-\end{description}
-
-\subsubsection{Subsubsection}
-
-\lipsum[13] % Dummy text
-
-\begin{itemize}[noitemsep] % [noitemsep] removes whitespace between the items for a compact look
-\item First item in a list
-\item Second item in a list
-\item Third item in a list
-\end{itemize}
-
-\subsubsection{Subsubsection}
-
-\lipsum[14] % Dummy text
-
-\subsection{Further applications}
+\section{Further applications}
 
 \lipsum[15-23] % Dummy text
 
@@ -160,7 +113,7 @@ Richard & Miles & $2$ \\
 
 \addcontentsline{toc}{section}{Acknowledgments} % Adds this section to the table of contents
 
-So long and thanks for all the fish \cite{Cavigelli:2017:CCI:3131885.3131906}.
+We would like to thank the Unidad de Fortalecimiento Empresarial, El Alto, Unidad de tráfico y vialidad, Oruro and to the Unidad de Tránsito Oruro for the feedback and facilities provided.
 
 %----------------------------------------------------------------------------------------
 %	REFERENCE LIST
