Added abstract and other fields

--- a/whitepaperDeMS.tex
+++ b/whitepaperDeMS.tex
@@ -17,7 +17,7 @@
 %----------------------------------------------------------------------------------------
 
 \definecolor{color1}{RGB}{94,192,150} % Color of the article title and sections
-\definecolor{color2}{RGB}{236,124,63} % Color of the boxes behind the abstract and headings
+\definecolor{color2}{RGB}{165,217,190} % Color of the boxes behind the abstract and headings
 
 %----------------------------------------------------------------------------------------
 %	HYPERLINKS
@@ -47,7 +47,7 @@
 %	ABSTRACT
 %----------------------------------------------------------------------------------------
 
-\Abstract{\lipsum[1]~}
+\Abstract{Privacy concerns and the high demand of GPU capabilities are the main problems when dealing with real time video processing, security and safety in the industry and growing cities are some of areas that demand the most video processing. The rising power of small computers and the increasing availability and effectivity in machine learning techniques allow to design devices capable of detecting events in real time without the need of internet connectivity and a cloud computing service, saving money and solving the increasing privacy problem for business and government.}
 
 %----------------------------------------------------------------------------------------
 
@@ -72,7 +72,7 @@
 Privacy concerns, low internet conectivity and low computational power are some of the main reasons to improve real time video analisys to work in local devices.
 %------------------------------------------------
 
-\section{Who We Are}
+\section{Deep Micro Systems}
 
 Deep Micro Systems is a Bolivian Start up in the field of computer vision and Smart cities. Our mission is to  expand the awareness and knowledge industry and governments to smart cities, providing security, efficiency and generating solutions to critical problems in a measurable and sustainable way.
 
@@ -88,17 +88,26 @@ With the main purpose of generating security in roads and streets, Our camera is
 \item Smart traffic light managing
 \end{itemize}
 
-\subsection{Low cost, effective devices}
+\subsection{Intelligent devices}
 
 The lowering costs of pocket computers and the increasing power and efficiency of machine learning techniques allow to build small devices capable of solve huge problems in cities and in the industry.
 
-\begin{figure}[ht]\centering
-\includegraphics[width=\linewidth]{images/lucam_005}
-\caption{All-In-One computer vision device}
-\label{fig:results}
+\begin{figure}[hb]\centering
+	\includegraphics[width=\linewidth]{images/lucam_005}
+	\caption{All-In-One computer vision device}
+	\label{fig:device}
 \end{figure}
 
-Currently Lu-Cam, our smart traffic enforcement camera is a 8x9x16 cm device capable, as seen in figure \ref{fig:results}, and it is capable of detecting events in real time video. Rather than getting frame features with convolutional neural networks, different techniques regarding real time fixed video cameras arrise, such as \cite{Cavigelli:2017:CCI:3131885.3131906}, in order to improve efficiency without missing the main objectives of a project.
+Currently Lu-Cam, our smart traffic enforcement camera is a 8x9x16 cm device capable, as seen in figure \ref{fig:device}, and it is capable of detecting events in real time video. Rather than getting frame features with convolutional neural networks, different techniques regarding real time fixed video cameras arrise, such as \cite{Cavigelli:2017:CCI:3131885.3131906}, in order to improve efficiency without missing the main objectives of a project.
+
+%------------------------------------------------
+\subsection{Real time monitoring and data analysis}
+
+\begin{figure}[ht]\centering
+	\includegraphics[width=\linewidth]{images/histogram}
+	\caption{Real time histogram}
+	\label{fig:histogram}
+\end{figure}
 
 %------------------------------------------------
 \input{cto}
