--- a/whitepaperDeMS.tex
+++ b/whitepaperDeMS.tex
@@ -137,7 +137,9 @@ Such All-In-One Devices holds a huge advantage, allowing to pre process data. Fo
 
 \section{Further applications}
 
-\lipsum[15-23] % Dummy text
+\subsection{Forecasting}
+
+\subsection{Real time simulation}
 
 %------------------------------------------------
 \phantomsection
