Added forecast section

--- a/whitepaperDeMS.tex
+++ b/whitepaperDeMS.tex
@@ -108,7 +108,7 @@ Computer processors such as Cortex-A53 (ARMv8) 64-bit SoC with 1.4GHz and ARM H3
 All this components allow to build custom devices for solving specific problems, providing ethernet connectivity, GPS, GSM/GPRS, Bluetooth, WiFi and any kind of sensors to be required.
 
 \begin{figure}[t]\centering
-	\includegraphics[width=\linewidth]{images/lucam_005}
+	\includegraphics[width=0.8\linewidth]{images/lucam_005}
 	\caption{All-In-One computer vision device}
 	\label{fig:device}
 \end{figure}
@@ -127,9 +127,9 @@ Such All-In-One Devices holds a huge advantage, allowing to pre process data. Fo
 \end{figure}
 
 \begin{figure*}[ht]\centering % Using \begin{figure*} makes the figure take up the entire width of the page
-\includegraphics[width=\linewidth]{images/sync}
-\caption{Time synchronization between cameras}
-\label{fig:sync}
+	\includegraphics[width=\linewidth]{images/sync}
+	\caption{Time synchronization between cameras}
+	\label{fig:sync}
 \end{figure*}
 
 %------------------------------------------------
@@ -137,9 +137,19 @@ Such All-In-One Devices holds a huge advantage, allowing to pre process data. Fo
 
 \section{Further applications}
 
-\subsection{Forecasting}
+\begin{figure}[b]\centering % Using \begin{figure*} makes the figure take up the entire width of the page
+	\includegraphics[width=\linewidth]{images/data}
+	\caption{Real time Traffic Forecast}
+	\label{fig:forecast}
+\end{figure}
+ 
+The applications for this kind of devices are endless. Real time monitoring and data analysis can lead us to a better understanding of cause problems and possible solutions to them thanks to data science and big data techniques.
 
-\subsection{Real time simulation}
+Forecasting data is another example of an application of monitoring systems, in the case of real time traffic monitoring it cann lead to traffic forecasting, saving thousands in time, fuel and possible accidents happening in streets and roads across Bolivia and the world, forecast is possible with a little amount of devices like shown in figure \ref{fig:forecast}
+
+
+
+Real time simulation is also possible thank to the real time and flow data in the devices, allowing us to extrapolate data to points where it is not possible to place a monitoring device. Like agressive environments in industries to complex roads in cities.
 
 %------------------------------------------------
 \phantomsection
