--- a/whitepaperDeMS.tex
+++ b/whitepaperDeMS.tex
@@ -4,7 +4,7 @@
 \usepackage[english]{babel} % Specify a different language here - english by default
 
 \usepackage{lipsum} % Required to insert dummy text. To be removed otherwise
-
+\usepackage{float}
 \usepackage{indentfirst}
 \setlength{\parindent}{0.7cm}
 
