Made some corrections

--- a/whitepaperDeMS.tex
+++ b/whitepaperDeMS.tex
@@ -120,7 +120,7 @@ Currently Lu-Cam, our smart traffic enforcement camera is a 8x9x16 cm device cap
 
 Such All-In-One Devices holds a huge advantage, allowing to pre process data. For example for real time road monitoring we could get real time histograms of infringements and label them according to our needs as shown in figure \ref{fig:histogram}. Then a central computer can handle data from several devices to make desitions, improving efficiency or automating complex process.
 
-\begin{figure}[ht]\centering
+\begin{figure}[t]\centering
 	\includegraphics[width=\linewidth]{images/histogram}
 	\caption{Real time histogram}
 	\label{fig:histogram}
@@ -137,7 +137,7 @@ Such All-In-One Devices holds a huge advantage, allowing to pre process data. Fo
 
 \section{Further applications}
 
-\begin{figure}[b]\centering % Using \begin{figure*} makes the figure take up the entire width of the page
+\begin{figure}[h]\centering % Using \begin{figure*} makes the figure take up the entire width of the page
 	\includegraphics[width=\linewidth]{images/data}
 	\caption{Real time Traffic Forecast}
 	\label{fig:forecast}
